[gd_scene load_steps=5 format=3 uid="uid://bqc77qqsonskv"]

[ext_resource type="Script" uid="uid://cxwg36w5ub451" path="res://components/ui/task_card.gd" id="1_rxra5"]
[ext_resource type="Texture2D" uid="uid://b34jeguax4tha" path="res://assets/ui/grey_button1.png" id="1_wq2m2"]
[ext_resource type="Texture2D" uid="uid://cpph6qmmgf2p3" path="res://assets/ui/greenbuttonpressed.png" id="3_vcm20"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vcm20"]
texture = ExtResource("1_wq2m2")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[node name="TaskCard" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -38.0
offset_right = 4.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_vcm20")
script = ExtResource("1_rxra5")
unselected_panel = ExtResource("1_wq2m2")
selected_panel = ExtResource("3_vcm20")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ShortTaskNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PayoutLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="WorkoutLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
flat = true
